--- a/shell/.gitconfig
+++ b/shell/.gitconfig
@@ -1,3 +1,6 @@
+[user]
+    name = nk2ge5k
+    email = nk2ge5k@gmail.com
 [alias]
     s = status --short -uall -b
     amend = commit --amend --no-edit
