--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -1,8 +1,7 @@
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
-set -g default-terminal "screen-256color"
-set -g terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
 
 # set tmux prefix to <Ctrl>-a
 unbind C-b
