--- a/shell/.gitconfig
+++ b/shell/.gitconfig
@@ -11,3 +11,4 @@
     find = log --pretty=\"format:%Cgreen%H\n%s\n\n%b\" --name-status --grep
     sdiff = diff --cached
     graph = log --graph --pretty='format:%C(red)%d%C(reset) %C(yellow)%h%C(reset) %ar %C(green)%aN%C(reset) %s'
+    unpushed = "!git log --branches --not --remotes"
